<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/attr_black_white_color"
    android:orientation="vertical"
    android:paddingBottom="?attr/actionBarSize">

    <!-- Заголовок -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/work_place_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="56dp"
            android:text="@string/work_place_text"
            android:textColor="?attr/attr_white_black_color"
            android:textSize="@dimen/text_size"
            tools:ignore="RtlSymmetry,SpUsage" />

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:background="@null"
            android:src="@drawable/arrow_back_icon"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/country_container"
        style="@style/filter_text_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/country_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/region_container"
        style="@style/filter_text_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/region_text" />
</LinearLayout>

    <!-- Кнопка Выбрать -->
<Button
android:id="@+id/choose_button"
android:layout_width="match_parent"
android:layout_height="59dp"
android:layout_gravity="center_horizontal"
android:layout_marginHorizontal="16dp"
android:layout_marginBottom="16dp"
    android:background="@drawable/rounded_image_button"
    android:text="@string/choose"
    android:textAppearance="@style/textAppearanceMedium16sp500w"
    android:textColor="@color/white"
    android:visibility="gone" />
    </LinearLayout>
